--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.291.0",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
@@ -56,7 +57,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-select": "^5.8.0",
-    "react-toastify": "^10.0.4",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
