--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,10 @@
   "extends": "next/core-web-vitals",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
+    "@typescript-eslint/no-unused-vars": ["off", { "args": "none" }],
+    "react-hooks/exhaustive-deps": "off",
     "import/no-unresolved": "error",
     "import/named": "off",
-    "no-console": "warn"
+    "no-console": "off"
   }
 }
